--- a/src/app/business/cash/cash.component.html
+++ b/src/app/business/cash/cash.component.html
@@ -16,7 +16,7 @@
     <p-table [columns]="cols" [value]="cashs" selectionMode="multiple" [(selection)]="selectedCashs" (onRowSelect)="onRowSelect($event)">
       <ng-template pTemplate="header" let-columns>
         <tr>
-          <th *ngFor="let col of columns">
+          <th *ngFor="let col of columns" >
             {{col.header}}
           </th>
         </tr>
@@ -216,7 +216,7 @@
           <label for="addAreaName1">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyCash.province.administrativeAreaName" [value]="this.modifyCash.province.administrativeAreaName" />
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyCash.city.administrativeAreaName"/>
         </div>
       </div>
       <!--所属服务区-->
@@ -225,7 +225,7 @@
           <label >所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyCash.serviceArea.serviceAreaName"></p-dropdown>
+          <p-dropdown [options]="addServicesAreaTrees" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyCash.serviceArea.serviceName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
