--- a/src/app/business/system/event-type/event-type.component.html
+++ b/src/app/business/system/event-type/event-type.component.html
@@ -11,23 +11,25 @@
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
   </div>
-  <!--数据-->
-  <p-table [columns]="cols" [value]="eventTypes" selectionMode="multiple" [(selection)]="selecteEventTypes" (onRowSelect)="onRowSelect($event)">
-    <ng-template pTemplate="header" let-columns>
-      <tr>
-        <th *ngFor="let col of columns">
-          {{col.header}}
-        </th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-rowData let-columns="columns">
-      <tr [pSelectableRow]="rowData">
-        <td *ngFor="let col of columns">
-          {{rowData[col.field]}}
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+  <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
+    <!--数据-->
+    <p-table [columns]="cols" [value]="eventTypes" selectionMode="multiple" [(selection)]="selecteEventTypes" (onRowSelect)="onRowSelect($event)">
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{col.header}}
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr [pSelectableRow]="rowData">
+          <td *ngFor="let col of columns">
+            {{rowData[col.field]}}
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </p-scrollPanel>
   <!--增加弹框-->
   <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="800">
     <div class="ui-g ui-fluid">
