1月8号 1、视频组管理摄像头类型的添加

--- a/src/app/business/videom/videom.component.html
+++ b/src/app/business/videom/videom.component.html
@@ -97,15 +97,6 @@
           <input pInputText id="addcameraName" [(ngModel)]="addVideo.cameraName"/>
         </div>
       </div>
-      <!--摄像头编号-->
-      <div class="ui-g-6">
-        <div class="ui-g-4">
-          <label for="addcameraNumber">摄像头编号：</label>
-        </div>
-        <div class="ui-g-8">
-          <input pInputText id="addcameraNumber" [(ngModel)]="addVideo.cameraNumber"/>
-        </div>
-      </div>
       <!--外网地址-->
       <div class="ui-g-6">
         <div class="ui-g-4">
@@ -139,10 +130,21 @@
           <label for="addvideoUrl">显示窗口位置：</label>
         </div>
         <div class="ui-g-8">
-          <p-radioButton id="addenabled3" name="group2" value="1" [(ngModel)]="addVideo.showLocation" label="1" inputId="opt2"></p-radioButton>
+          <p-radioButton id="addenabled5" name="group2" value="1" [(ngModel)]="addVideo.showLocation" label="1" inputId="opt2"></p-radioButton>
           <p-radioButton id="addenabled4" name="group2" value="2" [(ngModel)]="addVideo.showLocation" label="2" inputId="opt3"></p-radioButton>
           <p-radioButton id="addenabled5" name="group2" value="3" [(ngModel)]="addVideo.showLocation" label="3" inputId="opt3"></p-radioButton>
           <p-radioButton id="addenabled6" name="group2" value="4" [(ngModel)]="addVideo.showLocation" label="4" inputId="opt3"></p-radioButton>
+        </div>
+      </div>
+      <!--将是摄像头类型得位置-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addvideoUrl">选择摄像头类型：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-radioButton id="addenabled3" name="group3" value="1" [(ngModel)]="addVideo.cameraType" label="球机" inputId="opt2"></p-radioButton>
+          <p-radioButton id="addenabled4" name="group3" value="2" [(ngModel)]="addVideo.cameraType" label="半球" inputId="opt3"></p-radioButton>
+          <p-radioButton id="addenabled5" name="group3" value="3" [(ngModel)]="addVideo.cameraType" label="枪机" inputId="opt3"></p-radioButton>
         </div>
       </div>
     </div>
@@ -280,6 +282,17 @@
           <p-radioButton id="addenabled5" name="group2" value="2" [(ngModel)]="modifyVideo.showLocation" label="2" inputId="opt3"></p-radioButton>
           <p-radioButton id="addenabled6" name="group2" value="3" [(ngModel)]="modifyVideo.showLocation" label="3" inputId="opt3"></p-radioButton>
           <p-radioButton id="addenabled7" name="group2" value="4" [(ngModel)]="modifyVideo.showLocation" label="4" inputId="opt3"></p-radioButton>
+        </div>
+      </div>
+      <!--将是摄像头类型得位置-->
+      <div class="ui-g-6">
+        <div class="ui-g-4">
+          <label for="addvideoUrl">选择摄像头类型：</label>
+        </div>
+        <div class="ui-g-8">
+          <p-radioButton id="addenabled7" name="group3" value="1" [(ngModel)]="modifyVideo.cameraType" label="球机" ></p-radioButton>
+          <p-radioButton id="addenabled8" name="group3" value="2" [(ngModel)]="modifyVideo.cameraType" label="半球" ></p-radioButton>
+          <p-radioButton id="addenabled9" name="group3" value="3" [(ngModel)]="modifyVideo.cameraType" label="枪机" ></p-radioButton>
         </div>
       </div>
     </div>
