--- a/src/app/business/system/event-type/event-type.component.html
+++ b/src/app/business/system/event-type/event-type.component.html
@@ -85,7 +85,7 @@
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="modifyData()">确认</button>
-        <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+        <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
