--- a/src/app/business/area/area.component.html
+++ b/src/app/business/area/area.component.html
@@ -9,16 +9,9 @@
     <h1 class="text-center">区域管理</h1>
     <button class="btn btn-primary" (click)="addDialog=true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
-<!--    <button class="btn btn-info" (click)="revampClick()">修改</button>
-    <button class="btn btn-warning" (click)="checkClick()">查看</button>
-    <div style="float: right">
-      <div class="ui-inputgroup">
-        <button label="Search"  type="button" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" (click)="searchClick()">
-          <span class="ui-button-text ui-clickable">搜索 </span>
-        </button>
-        <input placeholder="请输入关键字..." type="text" [(ngModel)]="searchField" (keydown)="searchKeydown($event)" class="ui-inputtext ui-corner-all ui-state-default ui-widget">
-      </div>
-    </div>-->
+    <!--<label style="margin-left: 5vw" for="addAreaName">区域名称：</label>-->
+    <!--<input pInputText id="addAreaName" (click)="treeAreaClick()" [(ngModel)]="addArea.areaName" />-->
+    <!--<button class="btn" type="button" style="margin-left: 1vw">查询</button>-->
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
     <!--table数据-->
