--- a/src/app/business/org/org-department/org-department.component.html
+++ b/src/app/business/org/org-department/org-department.component.html
@@ -6,10 +6,19 @@
 <h1 class="text-center">部门管理</h1>
 <div class="video-manage">
   <!--按钮-->
-  <div class="btn-manner">
+  <div class="btn-manner" style="line-height: 2vh">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifybtn()">修改</button>
+    <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"/>
+    <label for="addCompany" style="margin-left:  0.5vw;font-size: 1.5rem">所属公司：</label>
+    <p-dropdown id="addCompany" [options]="addCompanySelect"  [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name"  placeholder="请选择所属公司..."></p-dropdown>
+    <label style="margin-left: 0.5vw;font-size: 1.5rem">部门编号：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw" [(ngModel)]="this.queryDepartment.deptCode"/>
+    <label  style="margin-left:  0.5vw;font-size: 1.5rem">部门名称：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw" [(ngModel)]="this.queryDepartment.deptName"/>
+    <button class="btn" type="button" style="margin: 0;padding: 0;width: 3vw;height: 3.5vh" (click)="conditionQuery()">查询</button>
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '50vh'}">
     <!--数据-->
@@ -39,7 +48,7 @@
           <label for="addCompany">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addCompany" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name"  placeholder="请选择所属公司..."></p-dropdown>
+          <input pInputText  id="addCompany" (click)="CompanyTreeClick()" [(ngModel)]="CompanyTree.name"  placeholder="请选择所属公司...">
         </div>
       </div>
       <div class="ui-g-6">
@@ -104,6 +113,51 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
         <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <!--区域选择-->
+  <p-dialog header="请选择区域" [(visible)]="areaDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="addAreaTrees"
+            selectionMode="single"
+            [(selection)]="addAreaTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectAreaClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <p-dialog header="请选择公司" [(visible)]="companyDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="CompanyTrees"
+            selectionMode="single"
+            [(selection)]="CompanyTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectCompanyClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="companyDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
