--- a/src/app/business/serarea/serarea-sernum/serarea-sernum.component.html
+++ b/src/app/business/serarea/serarea-sernum/serarea-sernum.component.html
@@ -6,10 +6,21 @@
 <div class="serarea-manage">
   <h1 class="text-center">服务区管理</h1>
   <!--按钮-->
-  <div class="btn-manner">
+  <div class="btn-manner" style="line-height: 2vh">
     <button class="btn btn-primary" (click)="addDialog = true">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="revampClick()">修改</button>
+    <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
+    <label for="addCompany" style="margin-left: 0.5vw;font-size: 1.5rem">所属公司：</label>
+    <p-dropdown id="addCompany"   [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name"  placeholder="请选择所属公司..."></p-dropdown>
+    <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">所属部门：</label>
+    <p-dropdown id="addDep"   [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+    <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">服务区id：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
+    <label for="addDep" style="margin-left:  0.5vw;font-size: 1.5rem">服务区名：</label>
+    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
+    <button class="btn" type="button" style="margin: 0;padding: 0;width: 3vw;height: 3.5vh">查询</button>
   </div>
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
     <!--数据-->
