--- a/src/app/business/user/user.component.css
+++ b/src/app/business/user/user.component.css
@@ -5,3 +5,11 @@
   width: 40vw;
   height: 30vh;
 }
+.btn-manner .addAreaNamelabel{
+  margin-left: 1vw;
+  font-size: 1.5rem;
+}
+.btn-manner .addAreaNameInput{
+  height: 3vh;
+  width: 7vw;
+}
