--- a/src/app/business/user/user.component.html
+++ b/src/app/business/user/user.component.html
@@ -7,15 +7,16 @@
   <h1 class="text-center">用户管理</h1>
   <!--按钮-->
   <div class="btn-manner" style="line-height: 2vh">
-    <button class="btn btn-primary" (click)="addDialog = true">增加</button>
+    <button class="btn btn-primary" (click)="addDialog = true;this.modifyFlag = 0">增加</button>
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
     <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
-    <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
+    <input pInputText id="addAreaName" class="addAreaNameInput"  (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label"/>
     <label for="addCompany" style="margin-left:  0.5vw;font-size: 1.5rem">所属公司：</label>
-    <p-dropdown id="addCompany" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name"  placeholder="请选择所属公司..."></p-dropdown>
+    <input pInputText  id="addCompany" (click)="CompanyTreeClick()" class="addAreaNameInput" [(ngModel)]="CompanyTree.label"  placeholder="请选择所属公司...">
+
     <label for="addDep" style="margin-left:  0.5vw;font-size: 1.5rem">所属部门：</label>
-    <p-dropdown id="addDep" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'9vw','margin-bottom':'3px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+    <input pInputText  id="addDep" (click)="departmentTreeClick()" [(ngModel)]="DepartmentTree.label" class="addAreaNameInput" placeholder="请选择所属部门...">
     <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">姓名：</label>
     <input pInputText id="addAreaName" style="height: 3vh;width: 7vw"/>
     <label for="addDep" style="margin-left:  0.5vw;font-size: 1.5rem">电话：</label>
@@ -50,7 +51,7 @@
           <label for="addorganizationName">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addorganizationName" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属公司..."></p-dropdown>
+          <input pInputText  id="addorganizationName" (click)="CompanyTreeClick()" class="addAreaNameInput" [(ngModel)]="CompanyTree.label"  placeholder="请选择所属公司...">
         </div>
       </div>
       <!--所属部门-->
@@ -59,16 +60,16 @@
           <label for="adddeptName">所属部门：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="adddeptName" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择所属部门..."></p-dropdown>
+          <input pInputText  id="adddeptName" (click)="departmentTreeClick()" [(ngModel)]="DepartmentTree.label"  placeholder="请选择所属部门...">
         </div>
       </div>
       <!--请选择职务-->
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="adddutyName">请选择职务：</label>
+          <label for="addpid">请选择职务：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="adddutyName"  [options]="addDepTopDutySelect" (onChange)="dutyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择职位..."></p-dropdown>
+          <input pInputText  id="addpid" (click)="dutyTreeClick()" [(ngModel)]="DutyTree.label"  placeholder="请选择所属部门...">
         </div>
       </div>
       <!--生日-->
@@ -161,7 +162,7 @@
           <label for="addorganizationName1">所属公司：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addorganizationName1" [options]="addCompanySelect" (onChange)="companyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyUser.organizationName"></p-dropdown>
+          <input pInputText  id="addorganizationName1" (click)="CompanyTreeClick()" class="addAreaNameInput" [(ngModel)]="CompanyTree.label"  [placeholder]="this.modifyUser.organizationName">
         </div>
       </div>
       <!--所属部门-->
@@ -170,7 +171,7 @@
           <label for="adddeptName1">所属部门：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="adddeptName1" [options]="addDepSelect" (onChange)="orgsChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyUser.deptName"></p-dropdown>
+          <input pInputText  id="adddeptName1" (click)="departmentTreeClick()" [(ngModel)]="DepartmentTree.label"  [placeholder]="this.modifyUser.deptName">
         </div>
       </div>
       <!--请选择职务-->
@@ -179,7 +180,7 @@
           <label for="adddutyName1">请选择职务：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="adddutyName1"  [options]="addDepTopDutySelect" (onChange)="dutyChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyUser.dutyName"></p-dropdown>
+          <input pInputText  id="adddutyName1" (click)="dutyTreeClick()" [(ngModel)]="DutyTree.label"  [placeholder]="this.modifyUser.dutyName">
         </div>
       </div>
       <!--生日-->
@@ -263,5 +264,95 @@
       </div>
     </p-footer>
   </p-dialog>
+   <!--树形结构弹窗-->
+  <p-dialog header="请选择区域" [(visible)]="areaDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="addAreaTrees"
+            selectionMode="single"
+            [(selection)]="addAreaTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectAreaClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <p-dialog header="请选择公司" [(visible)]="companyDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="CompanyTrees"
+            selectionMode="single"
+            [(selection)]="CompanyTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectCompanyClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="companyDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <p-dialog header="请选择部门" [(visible)]="departmentDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="DepartmentTrees"
+            selectionMode="single"
+            [(selection)]="DepartmentTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectDepartmentClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="departmentDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+  <p-dialog header="请选择职位" [(visible)]="dutyDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="DutyTrees"
+            selectionMode="single"
+            [(selection)]="DutyTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="treeSelectDutyClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="dutyDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
   <app-paging [option]="option" (pageClick)="nowpageEventHandle($event)"></app-paging>
 </div>
